--- a/testes/gradient_vs_OLS.ipynb
+++ b/testes/gradient_vs_OLS.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos implementar a regressão linear por gradiente descendente e por OLS para comparar os resultado"
+    "Vamos implementar a regressão linear por gradiente descendente e por OLS para comparar os resultado.\n",
+    "\n",
+    "OBS: O motivo para esse notebook é por causa de eu ter aprendido regressão linear a partir da descida de gradiente, e desconhecia essa outra forma de aprender os parâmetros (pesos) por OLS. Esse notebook é para testar estas duas formas de aprendizado."
    ]
   },
   {
@@ -31582,7 +31584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31618,7 +31620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -31628,7 +31630,7 @@
        "       [1.74999725]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
