--- a/MAB_study.ipynb
+++ b/MAB_study.ipynb
@@ -106497,6 +106497,72 @@
     "fig = px.bar(df_final_rewards, x='Algorithm', y='Final Reward', error_y=error_y_values, title='Final Average Reward of Each Algorithm')\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contextual MAB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formulação do problema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Contexto do usuário"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O usuário será representado por um vetor de 3 posições (*u*), sendo cada posição preenchida com um valor binário (0 ou 1). Por exemplo, considerando um contexto de sistemas de recomendação de filmes, cada posição poderia ser um gênero de filme que o usuário gosta ou não. Como temos apenas 3 posições no vetor e cada uma podendo assumir dois possíveis valores, temos um conjunto total de apenas 8 possíveis contextos de usuário."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ações / arms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neste problema, existirão 15 ações distintas, que podem ser escolhidas independentemente do contexto. Cada ação tem um vetor de 3 posições (*a<sub>x</sub>*) associada à ela, sendo que cada valor é um número real entre 0 e 1. Este vetor, por exemplo, poderia informar o quanto um filme (que seria uma ação / arm no caso de recomendação de filmes) é parecido com determinado gênero, sendo 1 um filme que se enquadra perfeitamente no gênero, e 0 um filme que não se enquadra nem um pouco no genêro. Esta informação será usada para gerar a probabilidade de recompensa positiva ao escolher à ação em um determinado contexto.\n",
+    "\n",
+    "OBS: essa informação não será usada para o aprendizado dos algoritmos de MAB apresentados aqui, mas poderiam ser usadas para tal em outros algoritmos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cálculo de probabilidade de recompensa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para calcular a probabilidade de recompensa positiva para uma ação (*a<sub>x</sub>*) e contexto (*u*) específico, a seguinte formula é utilizada:\n",
+    "\n",
+    "$$\n",
+    "\\frac{|u_0 - a_{x0}| + |u_1 - a_{x1}| + |u_0 - a_{x1}|}{3} * P_{max}\n",
+    "$$\n",
+    "\n",
+    "Além dos valores dos vetores, também é usado uma constante chamada `Pmax`, que define a probabilidade máxima de recompensa positiva que uma ação pode chegar. Por exemplo, se `Pmax` for igual à 0.8, então a ação com maior probabilidade de recompensa positiva será 0.8 (80%).\n",
+    "\n",
+    "Com a formula apresentada acima, ações mais semelhantes ao contexto terão uma chance de recompensa positiva maior, enquanto que se a ação for mais dessemelhante, menor será a probabilidade de recompensa positiva."
+   ]
   }
  ],
  "metadata": {
