--- a/MAB_study.ipynb
+++ b/MAB_study.ipynb
@@ -106556,12 +106556,14 @@
     "Para calcular a probabilidade de recompensa positiva para uma ação (*a<sub>x</sub>*) e contexto (*u*) específico, a seguinte formula é utilizada:\n",
     "\n",
     "$$\n",
-    "\\frac{|u_0 - a_{x0}| + |u_1 - a_{x1}| + |u_0 - a_{x1}|}{3} * P_{max}\n",
+    "\\frac{|u_0 - a_{x0}| + |u_1 - a_{x1}| + |u_2 - a_{x2}|}{3} * P_{max}\n",
     "$$\n",
     "\n",
     "Além dos valores dos vetores, também é usado uma constante chamada `Pmax`, que define a probabilidade máxima de recompensa positiva que uma ação pode chegar. Por exemplo, se `Pmax` for igual à 0.8, então a ação com maior probabilidade de recompensa positiva será 0.8 (80%).\n",
     "\n",
-    "Com a formula apresentada acima, ações mais semelhantes ao contexto terão uma chance de recompensa positiva maior, enquanto que se a ação for mais dessemelhante, menor será a probabilidade de recompensa positiva."
+    "Com a formula apresentada acima, ações mais semelhantes ao contexto terão uma chance de recompensa positiva maior, enquanto que se a ação for mais dessemelhante, menor será a probabilidade de recompensa positiva.\n",
+    "\n",
+    "Além disso, serão adicionados ações \"perfeitas\" para cada contexto, ou seja, existirá uma ação com probabilidade `Pmax` de recompensa. Com isso, é possível estipular um resultado `Best`, que é o valor de `Pmax`, quando sempre for escolhido o melhor braço em qualquer contexto."
    ]
   }
  ],
