--- a/mab2rec.ipynb
+++ b/mab2rec.ipynb
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -932,14 +932,14 @@
      "output_type": "stream",
      "text": [
       "Qtd hits: 3\n",
-      "Qtd interaction: 1370\n",
-      "HR: 0.0021897810218978104\n"
+      "Qtd interaction: 715\n",
+      "HR: 0.004195804195804196\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "df_test_filtered = df_test[(df_test['user_id'].isin(df_train['user_id'])) & (df_test['response'] == 5)]\n",
+    "df_test_filtered = df_test[(df_test['user_id'].isin(df_train['user_id'])) & (df_test['item_id'].isin(df_train['item_id'])) & (df_test['response'] == 5)]\n",
     "df_test_filtered = df_test_filtered.reset_index(drop=True)\n",
     "\n",
     "recomended_itens = rec.recommend(model.user_factors[df_test_filtered['user_id'].values])\n",
