--- a/mab2rec/testes_iniciais.ipynb
+++ b/mab2rec/testes_iniciais.ipynb
@@ -68,7 +68,7 @@
     "    'rating': 'response',\n",
     "}\n",
     "\n",
-    "df_full = pd.read_csv('data/interactions-timestamp.csv', sep=';')\n",
+    "df_full = pd.read_csv('../data/ciaoDVD/interactions-timestamp.csv', sep=';')\n",
     "df_full = df_full.sort_values(by='timestamp')\n",
     "df_full = df_full.rename(columns=rename_dict)\n",
     "df_full = df_full[['user_id', 'item_id', 'response']]\n",
