--- a/mab2rec/testes_train.ipynb
+++ b/mab2rec/testes_train.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testes de treinamento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esse notebook visa entender melhor o treinamento do mab2rec. Será feito um \"treinamento\" manualmente e depois um treinamento pela biblioteca, para verificar o que está sendo feito por baixo dos panos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Treinamento \"manual\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -407,6 +428,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Treinamento pela lib"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -484,6 +512,13 @@
    ],
    "source": [
     "rec.recommend(contexts=[[0, 0, 1]], return_scores=True, apply_sigmoid=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Os resultados foram os mesmos. O treinamento da biblioteca utiliza as interações de teste diratamente em seu treino, simulando que o agente tomou aquelas ações e teve aquelas recompensas"
    ]
   }
  ],
