--- a/mab2rec/testes_incremental_training.ipynb
+++ b/mab2rec/testes_incremental_training.ipynb
@@ -48,7 +48,7 @@
     "    updated_sparse_matrix = bm25_weight(sparse_matrix, K1=K1, B=B)\n",
     "\n",
     "    print('Treinando o modelo ALS')\n",
-    "    ALS_model = implicit.als.AlternatingLeastSquares(factors=FACTORS)\n",
+    "    ALS_model = implicit.als.AlternatingLeastSquares(factors=FACTORS, random_state=1)\n",
     "    ALS_model.fit(updated_sparse_matrix)\n",
     "\n",
     "    user_features_list = []\n",
@@ -96,6 +96,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def test_non_incremental(mab_algo, algo_name, user_features, df_test):\n",
+    "    print(f'Testing {algo_name}')\n",
+    "    hits = 0\n",
+    "\n",
+    "    contexts = df_test.merge(user_features, on='user_id').drop(columns=['user_id', 'item_id', 'response']).values\n",
+    "\n",
+    "    recomendations = mab_algo.recommend(contexts)\n",
+    "\n",
+    "    df_test = df_test.reset_index(drop=True)\n",
+    "\n",
+    "    hits = 0\n",
+    "    for i, interaction in df_test.iterrows():\n",
+    "        if interaction['item_id'] in recomendations[i]:\n",
+    "            hits += 1\n",
+    "\n",
+    "    print(f'\\n{algo_name} RESULTS:')\n",
+    "    print(f'Hits: {hits}')\n",
+    "    print(f'Total: {len(df_test)}')\n",
+    "    print(f'HR: {hits/len(df_test)}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def test_incremental(mab_algo, algo_name, user_features, df_test, df_test_for_evaluation, batch_size):\n",
     "    print(f'Testing {algo_name}')\n",
     "    hits = 0\n",
@@ -130,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,76 +184,14 @@
     "    ALS_model, linUCB_model, linGreedy_model, df_user_features, sparse_matrix = initial_train(df_train, num_users, num_items)\n",
     "\n",
     "    test_ALS(ALS_model, sparse_matrix, df_test_for_evaluation)\n",
+    "\n",
+    "    print('\\nTesting non-incremental\\n')\n",
+    "    test_non_incremental(linUCB_model, 'LinUCB', df_user_features, df_test_for_evaluation)\n",
+    "    test_non_incremental(linGreedy_model, 'LinGreedy', df_user_features, df_test_for_evaluation)\n",
+    "\n",
+    "    print('\\nTesting incremental\\n')\n",
     "    test_incremental(linUCB_model, 'LinUCB', df_user_features, df_test, df_test_for_evaluation, batch_size)\n",
     "    test_incremental(linGreedy_model, 'LinGreedy', df_user_features, df_test, df_test_for_evaluation, batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Treinando o modelo ALS\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregf\\anaconda3\\envs\\RLRS-rllib\\lib\\site-packages\\implicit\\utils.py:138: ParameterWarning: Method expects CSR input, and was passed coo_matrix instead. Converting to CSR took 0.001001119613647461 seconds\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebe8686985834694a472e63bebd6ddc5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/15 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Treinando o modelo LinUCB\n",
-      "Treinando o modelo LinGreedy\n",
-      "Testing ALS\n",
-      "\n",
-      "ALS RESULTS:\n",
-      "Hits: 79\n",
-      "Total: 623\n",
-      "HR: 0.12680577849117175\n",
-      "\n",
-      "Testing LinUCB\n",
-      "\n",
-      "LinUCB RESULTS:\n",
-      "Hits: 43\n",
-      "Total: 623\n",
-      "HR: 0.06902086677367576\n",
-      "\n",
-      "Testing LinGreedy\n",
-      "\n",
-      "LinGreedy RESULTS:\n",
-      "Hits: 49\n",
-      "Total: 623\n",
-      "HR: 0.07865168539325842\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "test(0.9, 10)"
    ]
   },
   {
@@ -245,14 +210,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gregf\\anaconda3\\envs\\RLRS-rllib\\lib\\site-packages\\implicit\\utils.py:138: ParameterWarning: Method expects CSR input, and was passed coo_matrix instead. Converting to CSR took 0.0 seconds\n",
+      "c:\\Users\\gregf\\anaconda3\\envs\\RLRS-rllib\\lib\\site-packages\\implicit\\utils.py:138: ParameterWarning: Method expects CSR input, and was passed coo_matrix instead. Converting to CSR took 0.0009992122650146484 seconds\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05ae4b35bb3a4434bc88f0b3c3706291",
+       "model_id": "7c0513bdba2440d7baf14ea025dad6b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,34 +237,54 @@
       "Testing ALS\n",
       "\n",
       "ALS RESULTS:\n",
-      "Hits: 929\n",
-      "Total: 4726\n",
-      "HR: 0.1965721540414727\n",
+      "Hits: 82\n",
+      "Total: 623\n",
+      "HR: 0.13162118780096307\n",
+      "\n",
+      "\n",
+      "Testing non-incremental\n",
       "\n",
       "Testing LinUCB\n",
       "\n",
       "LinUCB RESULTS:\n",
-      "Hits: 421\n",
-      "Total: 4726\n",
-      "HR: 0.08908167583580194\n",
+      "Hits: 47\n",
+      "Total: 623\n",
+      "HR: 0.0754414125200642\n",
       "\n",
       "Testing LinGreedy\n",
       "\n",
       "LinGreedy RESULTS:\n",
-      "Hits: 482\n",
-      "Total: 4726\n",
-      "HR: 0.10198899703766398\n",
+      "Hits: 50\n",
+      "Total: 623\n",
+      "HR: 0.08025682182985554\n",
+      "\n",
+      "\n",
+      "Testing incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 43\n",
+      "Total: 623\n",
+      "HR: 0.06902086677367576\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 51\n",
+      "Total: 623\n",
+      "HR: 0.08186195826645265\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "test(0.5, 10)"
+    "test(0.9, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +305,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9efbebd22d3481fbd0991753ac064ff",
+       "model_id": "6b477d5553d24081ac314cd4cfabc751",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,29 +325,49 @@
       "Testing ALS\n",
       "\n",
       "ALS RESULTS:\n",
-      "Hits: 910\n",
-      "Total: 4726\n",
-      "HR: 0.192551840880237\n",
+      "Hits: 82\n",
+      "Total: 623\n",
+      "HR: 0.13162118780096307\n",
+      "\n",
+      "\n",
+      "Testing non-incremental\n",
       "\n",
       "Testing LinUCB\n",
       "\n",
       "LinUCB RESULTS:\n",
-      "Hits: 387\n",
-      "Total: 4726\n",
-      "HR: 0.0818874312314854\n",
+      "Hits: 47\n",
+      "Total: 623\n",
+      "HR: 0.0754414125200642\n",
       "\n",
       "Testing LinGreedy\n",
       "\n",
       "LinGreedy RESULTS:\n",
-      "Hits: 435\n",
-      "Total: 4726\n",
-      "HR: 0.09204401184934405\n",
+      "Hits: 50\n",
+      "Total: 623\n",
+      "HR: 0.08025682182985554\n",
+      "\n",
+      "\n",
+      "Testing incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 42\n",
+      "Total: 623\n",
+      "HR: 0.06741573033707865\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 46\n",
+      "Total: 623\n",
+      "HR: 0.0738362760834671\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "test(0.5, 250)"
+    "test(0.9, 250)"
    ]
   },
   {
@@ -388,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f15c7fd518c64d90b21ba5897dbe9218",
+       "model_id": "d077327eccbe4746878d5f6c1f7f43df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -408,29 +413,49 @@
       "Testing ALS\n",
       "\n",
       "ALS RESULTS:\n",
-      "Hits: 833\n",
-      "Total: 8509\n",
-      "HR: 0.09789634504642143\n",
+      "Hits: 955\n",
+      "Total: 4726\n",
+      "HR: 0.20207363520947946\n",
+      "\n",
+      "\n",
+      "Testing non-incremental\n",
       "\n",
       "Testing LinUCB\n",
       "\n",
       "LinUCB RESULTS:\n",
-      "Hits: 547\n",
-      "Total: 8509\n",
-      "HR: 0.06428487483840639\n",
+      "Hits: 328\n",
+      "Total: 4726\n",
+      "HR: 0.06940330088870081\n",
       "\n",
       "Testing LinGreedy\n",
       "\n",
       "LinGreedy RESULTS:\n",
-      "Hits: 670\n",
-      "Total: 8509\n",
-      "HR: 0.07874015748031496\n",
+      "Hits: 378\n",
+      "Total: 4726\n",
+      "HR: 0.0799830723656369\n",
+      "\n",
+      "\n",
+      "Testing incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 395\n",
+      "Total: 4726\n",
+      "HR: 0.08358019466779518\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 479\n",
+      "Total: 4726\n",
+      "HR: 0.10135421074904782\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "test(0.1, 10)"
+    "test(0.5, 10)"
    ]
   },
   {
@@ -456,7 +481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80a1a528acad48dc9ff5813ad1913865",
+       "model_id": "df81169563f64500856b850ec73ad817",
        "version_major": 2,
        "version_minor": 0
       },
@@ -476,29 +501,49 @@
       "Testing ALS\n",
       "\n",
       "ALS RESULTS:\n",
-      "Hits: 815\n",
-      "Total: 8509\n",
-      "HR: 0.09578093783053238\n",
+      "Hits: 955\n",
+      "Total: 4726\n",
+      "HR: 0.20207363520947946\n",
+      "\n",
+      "\n",
+      "Testing non-incremental\n",
       "\n",
       "Testing LinUCB\n",
       "\n",
       "LinUCB RESULTS:\n",
-      "Hits: 515\n",
-      "Total: 8509\n",
-      "HR: 0.060524150899048064\n",
+      "Hits: 328\n",
+      "Total: 4726\n",
+      "HR: 0.06940330088870081\n",
       "\n",
       "Testing LinGreedy\n",
       "\n",
       "LinGreedy RESULTS:\n",
-      "Hits: 616\n",
-      "Total: 8509\n",
-      "HR: 0.07239393583264779\n",
+      "Hits: 378\n",
+      "Total: 4726\n",
+      "HR: 0.0799830723656369\n",
+      "\n",
+      "\n",
+      "Testing incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 425\n",
+      "Total: 4726\n",
+      "HR: 0.08992805755395683\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 449\n",
+      "Total: 4726\n",
+      "HR: 0.09500634786288616\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "test(0.1, 250)"
+    "test(0.5, 250)"
    ]
   },
   {
@@ -517,14 +562,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gregf\\anaconda3\\envs\\RLRS-rllib\\lib\\site-packages\\implicit\\utils.py:138: ParameterWarning: Method expects CSR input, and was passed coo_matrix instead. Converting to CSR took 0.0015070438385009766 seconds\n",
+      "c:\\Users\\gregf\\anaconda3\\envs\\RLRS-rllib\\lib\\site-packages\\implicit\\utils.py:138: ParameterWarning: Method expects CSR input, and was passed coo_matrix instead. Converting to CSR took 0.0 seconds\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1870100bd1f34bd993df769d1aeb62c9",
+       "model_id": "cced8d2b030044f98b79bda6f8cc23c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,29 +589,49 @@
       "Testing ALS\n",
       "\n",
       "ALS RESULTS:\n",
-      "Hits: 741\n",
-      "Total: 8242\n",
-      "HR: 0.08990536277602523\n",
+      "Hits: 824\n",
+      "Total: 8509\n",
+      "HR: 0.09683864143847691\n",
+      "\n",
+      "\n",
+      "Testing non-incremental\n",
       "\n",
       "Testing LinUCB\n",
       "\n",
       "LinUCB RESULTS:\n",
-      "Hits: 506\n",
-      "Total: 8242\n",
-      "HR: 0.061392865809269594\n",
+      "Hits: 389\n",
+      "Total: 8509\n",
+      "HR: 0.045716300387824656\n",
       "\n",
       "Testing LinGreedy\n",
       "\n",
       "LinGreedy RESULTS:\n",
-      "Hits: 575\n",
-      "Total: 8242\n",
-      "HR: 0.06976462023780636\n",
+      "Hits: 580\n",
+      "Total: 8509\n",
+      "HR: 0.06816312140086966\n",
+      "\n",
+      "\n",
+      "Testing incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 516\n",
+      "Total: 8509\n",
+      "HR: 0.060641673522153015\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 643\n",
+      "Total: 8509\n",
+      "HR: 0.07556704665648137\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "test(0.05, 10)"
+    "test(0.1, 10)"
    ]
   },
   {
@@ -592,7 +657,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b983451f385845a191e2a49fb9f3f19f",
+       "model_id": "fc107f9c01284d9090fb571dad61f1a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,23 +677,219 @@
       "Testing ALS\n",
       "\n",
       "ALS RESULTS:\n",
-      "Hits: 743\n",
-      "Total: 8242\n",
-      "HR: 0.09014802232467847\n",
+      "Hits: 824\n",
+      "Total: 8509\n",
+      "HR: 0.09683864143847691\n",
+      "\n",
+      "\n",
+      "Testing non-incremental\n",
       "\n",
       "Testing LinUCB\n",
       "\n",
       "LinUCB RESULTS:\n",
-      "Hits: 527\n",
-      "Total: 8242\n",
-      "HR: 0.06394079107012861\n",
+      "Hits: 389\n",
+      "Total: 8509\n",
+      "HR: 0.045716300387824656\n",
       "\n",
       "Testing LinGreedy\n",
       "\n",
       "LinGreedy RESULTS:\n",
-      "Hits: 677\n",
+      "Hits: 580\n",
+      "Total: 8509\n",
+      "HR: 0.06816312140086966\n",
+      "\n",
+      "\n",
+      "Testing incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 520\n",
+      "Total: 8509\n",
+      "HR: 0.06111176401457281\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 655\n",
+      "Total: 8509\n",
+      "HR: 0.07697731813374074\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test(0.1, 250)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treinando o modelo ALS\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gregf\\anaconda3\\envs\\RLRS-rllib\\lib\\site-packages\\implicit\\utils.py:138: ParameterWarning: Method expects CSR input, and was passed coo_matrix instead. Converting to CSR took 0.0005083084106445312 seconds\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c93d2f3508d3402993792e027915cf2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/15 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treinando o modelo LinUCB\n",
+      "Treinando o modelo LinGreedy\n",
+      "Testing ALS\n",
+      "\n",
+      "ALS RESULTS:\n",
+      "Hits: 749\n",
       "Total: 8242\n",
-      "HR: 0.08214025721912158\n",
+      "HR: 0.0908760009706382\n",
+      "\n",
+      "\n",
+      "Testing non-incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 556\n",
+      "Total: 8242\n",
+      "HR: 0.06745935452560058\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 556\n",
+      "Total: 8242\n",
+      "HR: 0.06745935452560058\n",
+      "\n",
+      "\n",
+      "Testing incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 484\n",
+      "Total: 8242\n",
+      "HR: 0.05872361077408396\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 602\n",
+      "Total: 8242\n",
+      "HR: 0.07304052414462509\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test(0.05, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treinando o modelo ALS\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gregf\\anaconda3\\envs\\RLRS-rllib\\lib\\site-packages\\implicit\\utils.py:138: ParameterWarning: Method expects CSR input, and was passed coo_matrix instead. Converting to CSR took 0.0 seconds\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f218f3370674533a4cb8a1ccfbb810c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/15 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treinando o modelo LinUCB\n",
+      "Treinando o modelo LinGreedy\n",
+      "Testing ALS\n",
+      "\n",
+      "ALS RESULTS:\n",
+      "Hits: 749\n",
+      "Total: 8242\n",
+      "HR: 0.0908760009706382\n",
+      "\n",
+      "\n",
+      "Testing non-incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 556\n",
+      "Total: 8242\n",
+      "HR: 0.06745935452560058\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 556\n",
+      "Total: 8242\n",
+      "HR: 0.06745935452560058\n",
+      "\n",
+      "\n",
+      "Testing incremental\n",
+      "\n",
+      "Testing LinUCB\n",
+      "\n",
+      "LinUCB RESULTS:\n",
+      "Hits: 515\n",
+      "Total: 8242\n",
+      "HR: 0.062484833778209174\n",
+      "\n",
+      "Testing LinGreedy\n",
+      "\n",
+      "LinGreedy RESULTS:\n",
+      "Hits: 659\n",
+      "Total: 8242\n",
+      "HR: 0.07995632128124242\n",
       "\n"
      ]
     }
