--- a/mab2rec/testes_incremental_training-v2.ipynb
+++ b/mab2rec/testes_incremental_training-v2.ipynb
@@ -87897,7 +87897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -87932,40 +87932,20 @@
           6,
           7,
           8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19
+          9
          ],
          "xaxis": "x",
          "y": [
-          0.09903381642512077,
-          0.11352657004830918,
-          0.1111111111111111,
-          0.11413043478260869,
-          0.12077294685990338,
-          0.11714975845410629,
-          0.11421670117322291,
-          0.11473429951690821,
-          0.11406333870101985,
-          0.11304347826086956,
-          0.11440491875274483,
-          0.11413043478260869,
-          0.11222593831289483,
-          0.11076604554865424,
-          0.10885668276972625,
-          0.10809178743961352,
-          0.10699062233589088,
-          0.10789049919484701,
-          0.10717009916094584,
-          0.10579710144927536
+          0.18858131487889274,
+          0.17301038062283736,
+          0.1643598615916955,
+          0.18858131487889274,
+          0.17301038062283736,
+          0.18685121107266436,
+          0.17647058823529413,
+          0.16608996539792387,
+          0.1695501730103806,
+          0.09515570934256055
          ],
          "yaxis": "y"
         },
@@ -87994,40 +87974,20 @@
           6,
           7,
           8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19
+          9
          ],
          "xaxis": "x",
          "y": [
-          0.0821256038647343,
-          0.07125603864734299,
-          0.06763285024154589,
-          0.06944444444444445,
-          0.07004830917874397,
-          0.07085346215780998,
-          0.07142857142857142,
-          0.06853864734299517,
-          0.06575415995705851,
-          0.06570048309178744,
-          0.06368028107158542,
-          0.06501610305958132,
-          0.06280193236714976,
-          0.06262939958592133,
-          0.06086956521739131,
-          0.06144323671497585,
-          0.06095481670929241,
-          0.06146001073537306,
-          0.06114924993643529,
-          0.06086956521739131
+          0.10207612456747404,
+          0.09342560553633218,
+          0.07612456747404844,
+          0.10899653979238755,
+          0.08823529411764706,
+          0.08304498269896193,
+          0.08131487889273356,
+          0.05190311418685121,
+          0.07785467128027682,
+          0.0657439446366782
          ],
          "yaxis": "y"
         },
@@ -88056,40 +88016,20 @@
           6,
           7,
           8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19
+          9
          ],
          "xaxis": "x",
          "y": [
-          0.0821256038647343,
-          0.07246376811594203,
-          0.071658615136876,
-          0.07185990338164251,
-          0.07246376811594203,
-          0.07246376811594203,
-          0.07349896480331262,
-          0.07065217391304347,
-          0.06790123456790123,
-          0.06763285024154589,
-          0.06609574000878349,
-          0.0678341384863124,
-          0.06651802303976218,
-          0.06677018633540373,
-          0.06521739130434782,
-          0.06582125603864734,
-          0.06550156294401818,
-          0.06602254428341385,
-          0.0653445207220951,
-          0.0644927536231884
+          0.10380622837370242,
+          0.0986159169550173,
+          0.07439446366782007,
+          0.10553633217993079,
+          0.08996539792387544,
+          0.08996539792387544,
+          0.0847750865051903,
+          0.05536332179930796,
+          0.07785467128027682,
+          0.06920415224913495
          ],
          "yaxis": "y"
         },
@@ -88118,40 +88058,20 @@
           6,
           7,
           8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19
+          9
          ],
          "xaxis": "x",
          "y": [
-          0.06521739130434782,
-          0.06521739130434782,
-          0.06763285024154589,
-          0.06763285024154589,
-          0.07101449275362319,
-          0.07004830917874397,
-          0.06935817805383022,
-          0.07065217391304347,
-          0.07380568974771873,
-          0.07560386473429952,
-          0.07971014492753623,
-          0.0821256038647343,
-          0.08231140839836493,
-          0.08298826777087646,
-          0.08309178743961353,
-          0.08439009661835749,
-          0.08354646206308611,
-          0.083467525496511,
-          0.0836511568777015,
-          0.08333333333333333
+          0.08131487889273356,
+          0.09688581314878893,
+          0.08823529411764706,
+          0.12110726643598616,
+          0.10726643598615918,
+          0.10726643598615918,
+          0.11072664359861592,
+          0.09342560553633218,
+          0.10034602076124567,
+          0.08650519031141868
          ],
          "yaxis": "y"
         },
@@ -88180,40 +88100,20 @@
           6,
           7,
           8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19
+          9
          ],
          "xaxis": "x",
          "y": [
-          0.057971014492753624,
-          0.06159420289855073,
-          0.06360708534621579,
-          0.0646135265700483,
-          0.06859903381642513,
-          0.06924315619967794,
-          0.06832298136645963,
-          0.07065217391304347,
-          0.07407407407407407,
-          0.07560386473429952,
-          0.07992973210364515,
-          0.08293075684380032,
-          0.08324043106651802,
-          0.0841959972394755,
-          0.08470209339774556,
-          0.08605072463768115,
-          0.08496732026143791,
-          0.08507783145464305,
-          0.0851767098906687,
-          0.08490338164251207
+          0.08131487889273356,
+          0.10207612456747404,
+          0.0847750865051903,
+          0.12283737024221453,
+          0.10726643598615918,
+          0.10207612456747404,
+          0.11245674740484429,
+          0.09688581314878893,
+          0.10034602076124567,
+          0.0847750865051903
          ],
          "yaxis": "y"
         }
@@ -89072,8 +88972,8 @@
     }
    ],
    "source": [
-    "train_size = 0.20\n",
-    "window_size = 0.05\n",
+    "train_size = 0.40\n",
+    "window_size = 0.10\n",
     "save_path = f'results-v2/{round(train_size * 100):02}-{round((1 - train_size) * 100):02}/recs.csv'\n",
     "\n",
     "df_recs = pd.read_csv(save_path)\n",
@@ -89105,6 +89005,8 @@
     "        \n",
     "        if total % int(len(curr_interactions) * window_size) == 0:\n",
     "            hrs.append(hits / total)\n",
+    "            total = 0\n",
+    "            hits = 0\n",
     "    \n",
     "    df_hrs = pd.concat([df_hrs, pd.DataFrame({'algorithm': [algo for _ in range(len(hrs))], 'interaction_number': [i for i in range(int(1 / window_size))], 'hr': hrs})])\n",
     "\n",
