inicio test mab2rec with filter

--- a/mab2rec/testes_incremental_training-v3.ipynb
+++ b/mab2rec/testes_incremental_training-v3.ipynb
@@ -64,10 +64,9 @@
     "\n",
     "def train_embeddings_model(Model, df, num_users, num_items, generate_embeddings=False):\n",
     "    sparse_matrix = csr_matrix((df['response'], (df['user_id'], df['item_id'])), shape=(num_users, num_items))\n",
-    "    updated_sparse_matrix = bm25_weight(sparse_matrix, K1=K1, B=B)\n",
     "\n",
     "    model = Model(factors=FACTORS, random_state=1)\n",
-    "    model.fit(updated_sparse_matrix)\n",
+    "    model.fit(sparse_matrix)\n",
     "\n",
     "    if not generate_embeddings:\n",
     "        return model, sparse_matrix\n",
@@ -1731,7 +1730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
