--- a/mab2rec/testes_incremental_items_emb.ipynb
+++ b/mab2rec/testes_incremental_items_emb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "10        4        2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        " [5, 5, 5, 5, 5]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        " array([3., 3., 3., 3., 3.])]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,9 +260,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>context</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1.0, 1.0, 1.0, 1.0, 1.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[3.0, 3.0, 3.0, 3.0, 3.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1.0, 1.0, 1.0, 1.0, 1.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1.5, 1.5, 1.5, 1.5, 1.5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1.0, 1.0, 1.0, 1.0, 1.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[3.0, 3.0, 3.0, 3.0, 3.0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    user_id  item_id                    context\n",
+       "0         1        0  [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+       "1         2        0  [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+       "2         1        4  [1.0, 1.0, 1.0, 1.0, 1.0]\n",
+       "3         1        1  [3.0, 3.0, 3.0, 3.0, 3.0]\n",
+       "4         3        4  [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+       "5         2        1  [1.0, 1.0, 1.0, 1.0, 1.0]\n",
+       "6         4        0  [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+       "7         5        4  [0.0, 0.0, 0.0, 0.0, 0.0]\n",
+       "8         2        4  [1.5, 1.5, 1.5, 1.5, 1.5]\n",
+       "9         4        4  [1.0, 1.0, 1.0, 1.0, 1.0]\n",
+       "10        4        2  [3.0, 3.0, 3.0, 3.0, 3.0]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "interactions_example['context'] = contexts\n",
     "interactions_example"
