--- a/mab2rec/testes_incremental_items_emb.ipynb
+++ b/mab2rec/testes_incremental_items_emb.ipynb
@@ -2548,7 +2548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
