new graphics for V2

--- a/mab2rec/testes_filter_already_consumed.ipynb
+++ b/mab2rec/testes_filter_already_consumed.ipynb
@@ -741,6 +741,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_incremental(df_results):\n",
+    "    new_df = df_results[(~df_results['algorithm'].str.contains('incremental') | df_results['algorithm'].str.contains('non-incremental'))]\n",
+    "    new_df['algorithm'] = new_df['algorithm'].str.replace(' - non-incremental', '')\n",
+    "    return new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_in_upper_and_lower_bounds(df_results, algo_names):\n",
+    "    train_sizes = sorted(df_results['train_size'].unique().tolist())\n",
+    "    min_train_size = train_sizes[0]\n",
+    "    max_train_size = train_sizes[-1]\n",
+    "    qnt_train_sizes = len(train_sizes)\n",
+    "\n",
+    "    for algo_name in algo_names:\n",
+    "        algo_row_lower = df_results[(df_results['algorithm'] == algo_name) & (df_results['train_size'] == min_train_size)]\n",
+    "        df_lower = pd.DataFrame({\n",
+    "            'algorithm': [f'{algo_name} lower'] * qnt_train_sizes,\n",
+    "            'hits': [algo_row_lower['hits'].values[0]] * qnt_train_sizes,\n",
+    "            'hr': [algo_row_lower['hr'].values[0]] * qnt_train_sizes,\n",
+    "            'time': [algo_row_lower['time'].values[0]] * qnt_train_sizes,\n",
+    "            'train_size': train_sizes,\n",
+    "            'test_size': [algo_row_lower['test_size'].values[0]] * qnt_train_sizes,\n",
+    "            'test_interactions': [algo_row_lower['test_interactions'].values[0]] * qnt_train_sizes\n",
+    "        })\n",
+    "        df_results = pd.concat([df_results, df_lower])\n",
+    "\n",
+    "        algo_row_upper = df_results[(df_results['algorithm'] == algo_name) & (df_results['train_size'] == max_train_size)]\n",
+    "        df_upper = pd.DataFrame({\n",
+    "            'algorithm': [f'{algo_name} upper'] * qnt_train_sizes,\n",
+    "            'hits': [algo_row_upper['hits'].values[0]] * qnt_train_sizes,\n",
+    "            'hr': [algo_row_upper['hr'].values[0]] * qnt_train_sizes,\n",
+    "            'time': [algo_row_upper['time'].values[0]] * qnt_train_sizes,\n",
+    "            'train_size': train_sizes,\n",
+    "            'test_size': [algo_row_upper['test_size'].values[0]] * qnt_train_sizes,\n",
+    "            'test_interactions': [algo_row_upper['test_interactions'].values[0]] * qnt_train_sizes\n",
+    "        })\n",
+    "        df_results = pd.concat([df_results, df_upper])\n",
+    "\n",
+    "        df_results = df_results[df_results['algorithm'] != algo_name]\n",
+    "    \n",
+    "    return df_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "def plot_results(df_results, save_root):\n",
+    "    df_results = remove_incremental(df_results)\n",
+    "    df_results = transform_in_upper_and_lower_bounds(df_results, ['ALS', 'BPR'])\n",
+    "\n",
+    "    algos_configs = {\n",
+    "        'ALS upper': {'color': 'blue', 'dash': 'dash'},\n",
+    "        'ALS lower': {'color': 'blue', 'dash': 'dash'},\n",
+    "        'BPR upper': {'color': 'red', 'dash': 'dash'},\n",
+    "        'BPR lower': {'color': 'red', 'dash': 'dash'},\n",
+    "        'LinUCB - ALS embeddings': {'color': 'green', 'dash': 'solid'},\n",
+    "        'LinUCB - BPR embeddings': {'color': 'purple', 'dash': 'solid'},\n",
+    "        'LinGreedy - ALS embeddings': {'color': 'orange', 'dash': 'solid'},\n",
+    "        'LinGreedy - BPR embeddings': {'color': 'pink', 'dash': 'solid'}\n",
+    "    }\n",
+    "\n",
+    "    fig = go.Figure()\n",
+    "    for algo_name, config in algos_configs.items():\n",
+    "        df_algo = df_results[df_results['algorithm'] == algo_name]\n",
+    "        fig.add_trace(go.Scatter(x=df_algo['train_size'], y=df_algo['hr'], mode='lines', name=algo_name, line=dict(color=config['color'], dash=config['dash'])))\n",
+    "    \n",
+    "    fig.update_layout(title='HR x Train size', xaxis_title='Train size', yaxis_title='HR')\n",
+    "    fig.show()\n",
+    "\n",
+    "    fig.write_html(f'{save_root}/hr_x_train_size.html')\n",
+    "    fig.write_image(f'{save_root}/hr_x_train_size.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_results(df_results, 'results-v5')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
