--- a/mab2rec/testes_incremental_items_emb.ipynb
+++ b/mab2rec/testes_incremental_items_emb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,6 +606,7 @@
     "    df_test = df_test[(df_test['user_id'].isin(initial_df_train['user_id'])) & (df_test['item_id'].isin(initial_df_train['item_id']))]\n",
     "    df_test = df_test.reset_index(drop=True)\n",
     "    df_test_for_evaluation = df_test[df_test['response'] == 1]\n",
+    "    df_test_for_evaluation = df_test_for_evaluation.reset_index(drop=True)\n",
     "\n",
     "    print('Generating ALS embeddings')\n",
     "    ALS_model, _, ALS_item_embeddings = train_embeddings_model(implicit.als.AlternatingLeastSquares, initial_df_train, num_users, num_items, generate_embeddings=True)\n",
@@ -616,10 +617,7 @@
     "    # MUDANCAS AQUI\n",
     "    df_full_new = pd.concat([initial_df_train, extra_df_train, df_test_for_evaluation])\n",
     "    als_contexts = create_contexts_list(df_full_new, ALS_item_embeddings)\n",
-    "    df_full_new['als_context'] = als_contexts\n",
-    "\n",
     "    bpr_contexts = create_contexts_list(df_full_new, BPR_item_embeddings)\n",
-    "    df_full_new['bpr_context'] = bpr_contexts\n",
     "\n",
     "    initial_df_train['als_context'] = als_contexts[:len(initial_df_train)]\n",
     "    initial_df_train['bpr_context'] = bpr_contexts[:len(initial_df_train)]\n",
@@ -730,7 +728,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66f7b5426e8c45d7826c2156e00a6d44",
+       "model_id": "53c9ff53c63345f4873a0fc4c704dbc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -751,7 +749,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bccdd17194b74bcf9c1ce639ebcf02a3",
+       "model_id": "fd6c3d8bd99f4897b692a7431f89a365",
        "version_major": 2,
        "version_minor": 0
       },
@@ -774,36 +772,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_12104\\1404263268.py:47: SettingWithCopyWarning: \n",
+      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_28300\\296335071.py:45: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  initial_df_train['als_context'] = als_contexts[:len(initial_df_train)]\n",
-      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_12104\\1404263268.py:48: SettingWithCopyWarning: \n",
+      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_28300\\296335071.py:46: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  initial_df_train['bpr_context'] = bpr_contexts[:len(initial_df_train)]\n",
-      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_12104\\1404263268.py:53: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_test_for_evaluation['als_context'] = als_contexts[len(initial_df_train) + len(extra_df_train):]\n",
-      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_12104\\1404263268.py:54: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_test_for_evaluation['bpr_context'] = bpr_contexts[len(initial_df_train) + len(extra_df_train):]\n"
+      "  initial_df_train['bpr_context'] = bpr_contexts[:len(initial_df_train)]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6901a275ab74b569f29e20ba7b9ac93",
+       "model_id": "b829d08348ae4d76a5aa0a673cac0f0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -825,7 +811,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e54ecf8963da41bea38cd0c20dc1076c",
+       "model_id": "57e3b3569a464e8ca619284ca193dbd5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -856,7 +842,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6650216f5f964e369659e05a38495b97",
+       "model_id": "2df291780542469b9af9d2ab53d0f0b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -878,7 +864,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27ff819486da49b3b20953794e4e5847",
+       "model_id": "c79ee51730f9454f89c78c4887cbf63f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -909,7 +895,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5efdc0ecca8e4f68b14a036ff73c277b",
+       "model_id": "1e6e156b91684792afb3a24a3c045e1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -931,7 +917,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b20d7294af7f4e668b18337d4e6cfe52",
+       "model_id": "6c7fa37e580c421bb99dcf62da1c4955",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,7 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db898561dae4430aaf594e179d5e7474",
+       "model_id": "64bb54d7e7c84ef692d1a9506488113d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -984,7 +970,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d64f026f1f847b6a764130b96affe09",
+       "model_id": "d73e8fafd04d4a8897258fb9ea7edcb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1015,7 +1001,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4f4c713561b47bab8183c28179f6295",
+       "model_id": "d7a1d25d03ee4fd78dbdb6395926f9c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1037,7 +1023,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b019e4bebf24096a58eaa618a12638a",
+       "model_id": "4a87c77e77f543ac819cc5c1e0e18fbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1068,7 +1054,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bfe7f3c38c84915b1c193c9369b3e64",
+       "model_id": "27ce13b2098341ea9fdad52bcb08f750",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1090,7 +1076,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d21a6faf6c044a0eb42b8414d51d478d",
+       "model_id": "40daf3c66d204a048783416b23c525e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1121,7 +1107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44420c367d5a4b0795e022bdf13812e1",
+       "model_id": "eb82ce6206a3487789b69035e1665b5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1143,7 +1129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6b595de2e1e4ce6bc8ba4c8ed5b48c9",
+       "model_id": "338b5d9b63824222a1650238bb44f9da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1174,7 +1160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f09f73c96f7149808b8c5bdadf063c8d",
+       "model_id": "b7dc7b4854764d649b96b13027f2c272",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1196,7 +1182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b20f0670cfe44f7929cde29ceb679f5",
+       "model_id": "16830501bc98438bb1d5872fd833e55d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1227,7 +1213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f9706bff67f49c7949c07fd0d713292",
+       "model_id": "2d5a985069d04f7ba8b878c992fe849e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1249,7 +1235,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "160fa16ff0fd4558b455472d9ec9e7f9",
+       "model_id": "5b1f2fbebbd04bd091aac303c6aa3106",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1280,7 +1266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bf29f77bb144240b7405fe868e01ade",
+       "model_id": "811ef092bc184369b09601a63997164e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1302,7 +1288,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55e9326121864433a6a68e4625ac3d12",
+       "model_id": "2cf5d5bff8dd4d678140563d33129538",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1333,7 +1319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d944fe3f81b4a3a982a52f3c9764cf3",
+       "model_id": "502b7f776c1f4ecaa2c554c6f93e9733",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1355,7 +1341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3ff43e8dd4d430ab9b77b7ba813c89d",
+       "model_id": "fbc3fa25c10748eaad7d8a0c7220c08c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1388,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2620,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
